Actualización Flujo changelog y mavenCI (#70)
* Se añade la opción de ejecutar manualmente CodeQL y Maven CI Test

* Se incluyo la rama JBRAN y se adecuo para que corra en Master el mavenCI

* Se excluyen Test de MySQL, MariaDB para GitHub Actions

Se adecuara posteriormente GitHub Actions para que soporte MySQL, MariaDB, PostgreSQL y SqlServer

* Se incluye Bageg de Openssf Best Practices

* Se incluye flujo de Trabajo PublishMaven

Adicional se adecuo la documentación y el plugin de javadoc

* Se añadio Plugin para la generación de sites de maven

* Publicación Version 1.1.8

* Publicación Version 1.1.8

* Actualización flujo MavenPublish

* Actualización flujo MavenPublish

* Actualización flujo MavenPublish 2

* Actualización flujo MavenPublish 3

* Actualización flujo MavenPublish 3

* Actualización flujo MavenPublish 3.2

* Actualización flujo MavenPublish 3.3

* Actualización flujo MavenPublish 3.4

* Actualización flujo MavenPublish 3.5

* Actualización flujo MavenPublish 3.6

* Actualización flujo MavenPublish 3.7

* Actualización flujo MavenPublish 3.8

* Actualización flujo MavenPublish 3.9

* Actualización flujo MavenPublish 4.0

* Publicación de flujo GitHub Packages

* Publicación de flujo GitHub Packages 1.1

* Publicación de flujo GitHub Packages 1.2

* Publicación de flujo GitHub Packages 1.3

* Actualización flujo GitHub Publish

* Actualización flujo GitHub Publish 1

* Actualización flujo GitHub Publish 2

* Actualización flujo GitHub Publish 3

* Actualización flujo GitHub Publish 4

* Actualización flujo GitHub Publish 5

* Actualización flujo GitHub Publish 6

* Actualización flujo GitHub Publish 7

* Actualización flujo GitHub Publish y Maven final

* Actualización Permisos maven.yml

* Actualización RELEASE-NOTES.txt

* Actualización mavenCI.yml

* Actualización mavenCI.yml  2

* Actualización mavenCI.yml 3

* Actualización mavenCI.yml 4

* Actualización Readme.md

* Actualización Readme.md

* Actualización Flujo changelog y mavenCI

* Actua